--- a/module-6-starter/single-repo.html
+++ b/module-6-starter/single-repo.html
@@ -25,10 +25,15 @@
     <div id="issues-container" class="list-group">
 
     </div>
+    
+    <div id="limit-warning">
+
+    </div>
+
   </main>
 
   <script src="./assets/js/single.js"></script>
-  
+
 </body>
 </body>
 
